# OpenGLFramework

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  vcpkg.json
src/: CMakeLists.txt
src/executables/: CMakeLists.txt
src/executables/CBTTest/: main.cpp
src/executables/CBT_CPU_Example/: main.cpp
src/executables/CBT_GPU_Example/: main.cpp
src/executables/FogTest/: main.cpp
src/executables/ImGuiDemo/: main.cpp
src/executables/Terrain/: main.cpp
src/executables/TexturedCubeIntoFramebuffer/: main.cpp
src/libraries/: CMakeLists.txt
src/libraries/intern/: CMakeLists.txt
src/libraries/intern/Camera/: Camera.cpp  Camera.h  Camera_MatrixAccess.cpp
src/libraries/intern/Context/: Context.cpp  Context.h
src/libraries/intern/Framebuffer/: Framebuffer.cpp  Framebuffer.h
src/libraries/intern/InputManager/: InputManager.cpp  InputManager.h
src/libraries/intern/Mesh/: Cube.cpp  Cube.h  FullscreenTri.cpp  FullscreenTri.h  Mesh.cpp  Mesh.h
src/libraries/intern/Misc/: Color.cpp  Color.h  GPUTimer.h  ImGuiExtensions.cpp  ImGuiExtensions.h  OpenGLErrorHandler.cpp  OpenGLErrorHandler.h  RollingAverage.h  StringSplitter.cpp  StringSplitter.h  sRGB.h
src/libraries/intern/Scene/: Entity.cpp  Entity.h  Light.cpp  Light.h  Material.cpp  Material.h  ReflectionProbe.cpp  ReflectionProbe.h  Scene.cpp  Scene.h
src/libraries/intern/ShaderProgram/: ShaderProgram.cpp  ShaderProgram.h
src/libraries/intern/Terrain/: CBT.cpp  CBT.h  CBTGPU.cpp  CBTGPU.h  CBTOptimized.cpp  CBTOptimized.h  CBTOptimized_HighLevel.cpp  CBTOptimized_LowLevel.cpp  CBTOptimized_Updating.cpp  Terrain.cpp  Terrain.h  TriangleTemplate.cpp  TriangleTemplate.h
src/libraries/intern/Texture/: GLTexture.h  ImageData.h  Texture.cpp  Texture.h  Texture3D.cpp  Texture3D.h  TextureCube.cpp  TextureCube.h
src/libraries/intern/Window/: Window.cpp  Window.h
src/libraries/testing/: CMakeLists.txt  misc.cpp  misc.h
src/shaders/Fog/: BasicFog.frag  SSMSdownsample.frag  SSMSdownsample0to1.frag  SSMSinitialFog.frag  SSMSprefilter.frag  SSMSupsample.frag  SSMSupsampleAndCombine.frag
src/shaders/General/: Blending.glsl  CameraMatrices.glsl  MaterialAttributes.glsl  brdfIntegral.frag  environmentMap.frag  environmentMap.vert  hdrTonemapSimple.frag  irradianceMap.frag  lighting.glsl  math.glsl  passPosition.vert  pbs.frag  pbs.vert  postProcess.frag  probeVisualization.frag  prototypeGrid.frag  prototypeGrid.vert  rnm.glsl  screenQuad.vert  shadow.frag  shadow.vert  simple.frag  simpleColor.frag  simpleTexture.frag  simpleTexture.vert  sky.frag  sky.vert
src/shaders/Terrain/: SettingsStruct.glsl  triangleTreeVis.vert
src/shaders/Terrain/CBT/: CBT.glsl  FetchAttributes.glsl  FetchAttributesFromID.glsl  FetchHeight.glsl  FetchHeightFromID.glsl  HighLevel.glsl  LowLevel.glsl  Misc.glsl  PixelCountPrefixSum.comp  PixelCounting.comp  PixelCountingWithCache.comp  PixelSorting.comp  PixelSortingFromCache.comp  Update.comp  Visbuffer.frag  Visbuffer.vert  VisbufferScreenPass.frag  drawing.frag  drawing.vert  indirectCommandStructs.glsl  outline.frag  outline.geom  outline.vert  overlay.frag  overlay.geom  overlay.vert  refineAroundPoint.comp  sumReduction.comp  sumReductionLastDepths.comp  transform.glsl  uvbufferScreenPass.frag  (+1 more)
src/tests/: CBT.cpp  CBT_CPU.cpp  CBT_GPU.cpp  CMakeLists.txt  TextureFormats.cpp
(+28 files in other folders)
